--- a/views/menu/menuForm.html
+++ b/views/menu/menuForm.html
@@ -93,6 +93,10 @@
         form.on('submit(layuiadmin-app-form-submit)', function (data) {
             var field = data.field; //获取提交的字段
             var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引  
+            if (~field.sign.indexOf(',')) {
+                layer.msg(`标识不能含有','`)
+                return
+            }
             //提交 Ajax 成功后，关闭当前弹层并重载表格
             admin.req({
                 type: 'post',
