--- a/views/user/userForm.html
+++ b/views/user/userForm.html
@@ -5,7 +5,7 @@
         <label class="layui-form-label">用户名</label>
         <div class="layui-input-inline">
             <input type="text" name="username" lay-verify="required" placeholder="请输入名称" autocomplete="off" class="layui-input"
-                value="{{userData.name}}">
+                value="{{userData.username}}">
         </div>
     </div>
     <div class="layui-form-item">
