--- a/views/user/adminForm.html
+++ b/views/user/adminForm.html
@@ -14,9 +14,7 @@
             <input type="text" name="area" lay-verify="required" placeholder="请输入" autocomplete="off" class="layui-input"
                 value="{{userData.area}}">
         </div>
-        <span style="line-height:38px;">
-            .ds.junn.top
-        </span>
+        <div class="layui-form-mid layui-word-aux">.ds.junn.top</div>
     </div>
     {% if userData.username %}
     <div class="layui-form-item">
