--- a/views/carTrainer/carTrainerList.html
+++ b/views/carTrainer/carTrainerList.html
@@ -2,10 +2,10 @@
 {% block content %}
 <div class="layui-fluid">
     <div class="layui-card">
-        <div class="layui-form layui-card-header layuiadmin-card-header-auto" style="display:none;">
+        <div class="layui-form layui-card-header layuiadmin-card-header-auto">
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label class="layui-form-label">名称</label>
+                    <label class="layui-form-label">姓名</label>
                     <div class="layui-input-inline">
                         <input type="text" name="name" placeholder="请输入" autocomplete="off" class="layui-input">
                     </div>
@@ -34,7 +34,7 @@
           {% endraw %}
         </script>
             <script type="text/html" id="table-content-list">
-                <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
+                <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>查看</a>
           <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>
         </script>
         </div>
@@ -131,14 +131,32 @@
                         fixed: "left"
                     },
                     {
-                        field: "content",
-                        title: "消息内容",
-                        sort: !0
+                        field: "name",
+                        title: "姓名",
+                    },
+                    {
+                        field: "card",
+                        title: "身份证",
+                    }, {
+                        field: "phone",
+                        title: "手机号",
+                    }, {
+                        field: "subjects",
+                        title: "培训科目",
+                    }, {
+                        field: "carTypes",
+                        title: "培训车型",
+                    },
+                    {
+                        field: "status",
+                        title: "状态",
+                        templet: "#buttonTpl",
+                        minWidth: 80,
+                        align: "center"
                     },
                     {
                         field: "createdAt",
                         title: "上传时间",
-                        sort: !0
                     },
                     {
                         title: "操作",
@@ -159,40 +177,45 @@
         table.on("tool(LAY-app-content-list)",
             function (obj) {
                 var data = obj.data;
-                "del" === obj.event ? layer.confirm("确定删除此消息？", function (index) {
-                    admin.req({
-                        type: 'delete',
-                        url: '/api/carTrainers/' + data._id
+                if ("del" === obj.event) {
+                    layer.confirm("确定删除此消息？", function (index) {
+                        admin.req({
+                            type: 'delete',
+                            url: '/api/carTrainers/' + data._id
+                        })
+                        obj.del()
+                        layer.close(index)
                     })
-                    obj.del()
-                    layer.close(index)
-                }) : "edit" === obj.event && layer.open({
-                    type: 2,
-                    title: "编辑消息",
-                    content: "/carTrainer/carTrainerForm.html?id=" + data._id,
-                    maxmin: !0,
-                    area: ["550px", "550px"],
-                    btn: ["确定", "取消"],
-                    yes: function (index, layero) {
-                        var iframe = window["layui-layer-iframe" + index],
-                            deitEle = layero.find("iframe").contents().find(
-                                "#layuiadmin-app-form-edit");
-                        iframe.layui.form.on("submit(layuiadmin-app-form-edit)",
-                            function (sonObj) {
-                                var field = sonObj.field;
-                                admin.req({
-                                    type: 'put',
-                                    url: '/api/carTrainers/' + data._id,
-                                    data: field,
-                                    success: function (res) {
-                                        obj.update(layui.$.extend({}, field));
-                                        form.render();
-                                        layer.close(index)
-                                    }
-                                })
-                            }), deitEle.trigger("click")
-                    }
-                })
+                } else if ("edit" === obj.event) {
+                    top.layui && top.layui.index.openTabsPage('/carTrainer/carTrainerForm.html?id=' + data._id, data.name)
+                }
+                // layer.open({
+                //     type: 2,
+                //     title: "编辑消息",
+                //     content: "/carTrainer/carTrainerForm.html?id=" + data._id,
+                //     maxmin: !0,
+                //     area: ["550px", "550px"],
+                //     btn: ["确定", "取消"],
+                //     yes: function (index, layero) {
+                //         var iframe = window["layui-layer-iframe" + index],
+                //             deitEle = layero.find("iframe").contents().find(
+                //                 "#layuiadmin-app-form-edit");
+                //         iframe.layui.form.on("submit(layuiadmin-app-form-edit)",
+                //             function (sonObj) {
+                //                 var field = sonObj.field;
+                //                 admin.req({
+                //                     type: 'put',
+                //                     url: '/api/carTrainers/' + data._id,
+                //                     data: field,
+                //                     success: function (res) {
+                //                         obj.update(layui.$.extend({}, field));
+                //                         form.render();
+                //                         layer.close(index)
+                //                     }
+                //                 })
+                //             }), deitEle.trigger("click")
+                //     }
+                // })
             })
         table.render({
             elem: "#LAY-app-content-tags",
