--- a/views/template/layout.html
+++ b/views/template/layout.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="//cdn.junn.top/layui/2.4.3/css/layui.css">
     <link rel="stylesheet" href="/css/admin.css">
-    <link rel="stylesheet" href="/css/append.css">
+    <link rel="stylesheet" href="/css/append.css?v={{version}}">
 </head>
 <body {% block bodyAttr %}{% endblock %}>
 
