--- a/views/carStudent/carStudentForm.html
+++ b/views/carStudent/carStudentForm.html
@@ -1,84 +1,230 @@
-{% extends '../template/layout2.html' %}
-{% block link %}
-<style>
-    body {
-        background: #fff;
-    }
-</style>
-{% endblock %}
+{% extends '../template/layout.html' %}
+
 {% block content %}
-<form class="layui-form" lay-filter="layuiadmin-app-form-list" id="layuiadmin-app-form-list" style="padding: 20px 30px 0 0;">
+<form class="layui-form" lay-filter="layuiadmin-app-form-list" id="layuiadmin-app-form-list">
     <input type="hidden" name="id" id="carStudentId" value="{{carStudent.id}}">
-    <div class="layui-form-item">
-        <div class="layui-inline">
-            <label class="layui-form-label required">姓名</label>
-            <div class="layui-input-inline">
-                <input type="text" name="name" value="{{carStudent.name}}" lay-verify="required" placeholder=""
-                    minlength="1" maxlength="10" autocomplete="off" class="layui-input">
+    <div class="layui-fluid">
+        <div class="layui-row layui-col-space15">
+            <div class="layui-col-md6">
+                <div class="layui-card">
+                    <div class="layui-card-header">基本信息</div>
+                    <div class="layui-card-body">
+                        <div class="layui-form-item">
+                            <div class="layui-inline">
+                                <label class="layui-form-label required">姓名</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" name="name" value="{{carStudent.name}}" required lay-verify="required"
+                                        placeholder="" minlength="1" maxlength="10" autocomplete="off" class="layui-input">
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <label class="layui-form-label required">手机号</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" name="phone" value="{{carStudent.phone}}" required lay-verify="phone"
+                                        placeholder="" autocomplete="off" class="layui-input">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <div class="layui-inline">
+                                <label class="layui-form-label">证件类型</label>
+                                <div class="layui-input-inline">
+                                    <select name="cardType">
+                                        <option value="身份证">身份证</option>
+                                        <option value="军官证">军官证</option>
+                                        <option value="士兵证">士兵证</option>
+                                        <option value="军官退休证">军官退休证</option>
+                                        <option value="境外人员身份证">境外人员身份证</option>
+                                        <option value="外交人员身份证">外交人员身份证</option>
+                                        <option value="其他">其他</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <label class="layui-form-label required">证件号码</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" name="card" value="{{carStudent.card}}" lay-verify="identity"
+                                        placeholder="" autocomplete="off" class="layui-input" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label required">有效期止</label>
+                            <div class="layui-input-inline">
+                                <input type="text" name="cardExpiryDate" id="cardExpiryDate" value="{{carStudent.cardExpiryDate}}"
+                                    id="LAY-component-form-group-date" lay-verify="date" placeholder="" required
+                                    autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label required">出生年月</label>
+                            <div class="layui-input-inline">
+                                <input type="text" name="birthday" id="birthday" required value="{{carStudent.birthday}}"
+                                    id="LAY-component-form-group-date" lay-verify="date" placeholder="" autocomplete="off"
+                                    class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <div class="layui-inline">
+                                <label class="layui-form-label ">国籍</label>
+                                <div class="layui-input-inline">
+                                    <select name="nationality" lay-verify="">
+                                        <option value="中国">中国</option>
+                                        <option value="其他">其他</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <label class="layui-form-label ">户籍</label>
+                                <div class="layui-input-inline">
+                                    <select name="familyRegister" lay-verify="">
+                                        <option value="本地学员">本地学员</option>
+                                        <option value="外地学员">外地学员</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label ">联系地址</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="address" value="{{carStudent.address}}" placeholder=""
+                                    minlength="1" maxlength="10" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">性别</label>
+                            <div class="layui-input-block">
+                                <input type="radio" name="sex" value="男" title="男" {% if carStudent.sex=='男' ||
+                                    !carStudent.sex %} checked="checked" {% endif %}>
+                                <input type="radio" name="sex" value="女" title="女" {% if carStudent.sex=='女' %} checked="checked"
+                                    {% endif %}>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="layui-card">
+                    <div class="layui-card-header">备注</div>
+                    <div class="layui-card-body layui-row layui-col-space10">
+                        <div class="layui-col-md12">
+                            <textarea name="" placeholder="请输入" class="layui-textarea"></textarea>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="layui-inline">
-            <label class="layui-form-label required">身份证</label>
-            <div class="layui-input-inline">
-                <input type="text" name="card" value="{{carStudent.card}}" lay-verify="identity"
-                    placeholder="" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-inline">
-            <label class="layui-form-label required">手机号</label>
-            <div class="layui-input-inline">
-                <input type="text" name="phone" value="{{carStudent.phone}}" lay-verify="phone"
-                    placeholder="" autocomplete="off" class="layui-input">
+            <div class="layui-col-md6">
+                <div class="layui-card">
+                    <div class="layui-card-header">报名相关</div>
+                    <div class="layui-card-body">
+                        <div class="layui-form-item">
+                            <div class="layui-inline">
+                                <label class="layui-form-label required">校区</label>
+                                <div class="layui-input-inline">
+                                    <select name="campus" lay-verify="required">
+                                        <option value=""></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <label class="layui-form-label ">推荐人</label>
+                                <div class="layui-input-inline">
+                                    <select name="referrer" lay-verify="">
+                                        <option value=""></option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <div class="layui-inline">
+                                <label class="layui-form-label required">班型</label>
+                                <div class="layui-input-inline">
+                                    <select name="classType" lay-verify="required">
+                                        <option value=""></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <label class="layui-form-label required">价格</label>
+                                <div class="layui-input-inline">
+                                    <input class="layui-input" type="number" lay-verify="number" name="registerPrice"
+                                        value="{{carStudent.registerPrice}}" min="0" max="999999">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <div class="layui-inline">
+                                <label class="layui-form-label required">报名点</label>
+                                <div class="layui-input-inline">
+                                    <select name="regPoint" lay-verify="required">
+                                        <option value=""></option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <label class="layui-form-label required">报名日期</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" name="registerDate" id="registerDate" value="{{carStudent.registerDate}}"
+                                        id="LAY-component-form-group-date" lay-verify="date" placeholder="" required
+                                        autocomplete="off" class="layui-input">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">外校转入</label>
+                            <div class="layui-input-inline">
+                                <input type="checkbox" lay-verify="required" lay-filter="otherSchool" name="otherSchool"
+                                    lay-skin="switch" lay-text="是|否" value="true" {% if classType.otherSchool %}
+                                    checked="checked" {% endif %}>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">登记地址</label>
+                            <div class="layui-input-block">
+                                <input type="text" name="registerAddress" value="{{carStudent.registerAddress}}"
+                                    placeholder="" minlength="1" maxlength="10" autocomplete="off" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">准驾车型</label>
+                            <div class="layui-input-block">
+                                <select name="carType">
+                                    <option value="C1">C1</option>
+                                    <option value="C2">C2</option>
+                                    <option value="C3">C3</option>
+                                    <option value="C3D">C3D</option>
+                                    <option value="C4">C4</option>
+                                    <option value="C5">C5</option>
+                                    <option value="A1">A1</option>
+                                    <option value="A2">A2</option>
+                                    <option value="A3">A3</option>
+                                    <option value="B1">B1</option>
+                                    <option value="B2">B2</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label class="layui-form-label">申请类型</label>
+                            <div class="layui-input-block">
+                                <select name="registerType">
+                                    <option value="初次申领">初次申领</option>
+                                    <option value="增驾">增驾</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="layui-form-item">
-        <div class="layui-inline">
-            <label class="layui-form-label">性别</label>
-            <div class="layui-input-inline">
-                <input type="radio" name="sex" value="男" title="男" {% if carStudent.sex=='男' || !carStudent.sex %}
-                    checked="checked" {% endif %}>
-                <input type="radio" name="sex" value="女" title="女" {% if carStudent.sex=='女' %} checked="checked" {%
-                    endif %}>
-            </div>
-        </div>
-        <div class="layui-inline">
-            <label class="layui-form-label">培训科目</label>
-            <div class="layui-input-block">
-                <input type="checkbox" name="subjects" title="科目一" value="科目一" {% if carStudent.subjects &&
-                    carStudent.subjects.includes('科目一') %} checked="checked" {% endif %}>
-                <input type="checkbox" name="subjects" title="科目二" value="科目二" {% if carStudent.subjects &&
-                    carStudent.subjects.includes('科目二') %} checked="checked" {% endif %}>
-            </div>
-        </div>
-    </div>
-    <div class="layui-form-item">
-        <div class="layui-inline">
-            <label class="layui-form-label">培训车型</label>
-            <div class="layui-input-block">
-                <input type="checkbox" name="carTypes" title="C1" value="C1" {% if carStudent.carTypes &&
-                    carStudent.carTypes.includes('C1') %} checked="checked" {% endif %}>
-                <input type="checkbox" name="carTypes" title="C2" value="C2" {% if carStudent.carTypes &&
-                    carStudent.carTypes.includes('C2') %} checked="checked" {% endif %}>
-            </div>
-        </div>
-    </div>
-    <div class="layui-form-item">
-        <div class="layui-inline">
-            <label class="layui-form-label">状态</label>
-            <div class="layui-input-inline">
-                <input type="checkbox" lay-verify="required" lay-filter="status" name="status" lay-skin="switch"
-                    lay-text="启用|不启用" value="true" {% if carStudent.status %} checked="checked" {% endif %}> </div>
-        </div>
-    </div>
-    <div class="layui-form-item">
+    <div class="layui-form-item layui-layout-admin">
         <div class="layui-input-block">
-            {% if carStudent.id %}
-            <button class="layui-btn" lay-submit="" lay-filter="submit">保存编辑</button>
-            {% endif %}
-            {% if !carStudent.id %} <button class="layui-btn" lay-submit="" lay-filter="submit">添加教练</button>
-            <button type="reset" class="layui-btn layui-btn-primary" id="rest">重置</button>
-            {% endif %}
+            <div class="layui-footer" style="left: 0;">
+                {% if carStudent.id %}
+                <button class="layui-btn" lay-submit="" lay-filter="submit">保存编辑</button>
+                {% endif %}
+                {% if !carStudent.id %} <button class="layui-btn" lay-submit="" lay-filter="submit">添加学员</button>
+                <button type="reset" class="layui-btn layui-btn-primary" id="rest">重置</button>
+                {% endif %}
+            </div>
         </div>
     </div>
 </form>
@@ -89,11 +235,23 @@
         base: '/' //静态资源所在路径
     }).extend({
         index: 'js/lib/index' //主入口模块
-    }).use(['index', 'form'], function () {
+    }).use(['index', 'form', 'laydate'], function () {
         var $ = layui.$
         var admin = layui.admin
         var form = layui.form
         var layer = layui.layer
+        var laydate = layui.laydate
+
+        laydate.render({
+            elem: '#registerDate'
+        })
+        laydate.render({
+            elem: '#birthday'
+        })
+        laydate.render({
+            elem: '#cardExpiryDate'
+        })
+
 
         /* 监听提交 */
         form.on('submit(submit)', function (data) {
