--- a/views/carStudent/carStudentList.html
+++ b/views/carStudent/carStudentList.html
@@ -86,10 +86,10 @@
                     });
                 },
                 add: function () {
-                    top.layui && top.layui.index.openTabsPage('/carStudent/carStudentForm.html', '添加教练')
+                    top.layui && top.layui.index.openTabsPage('/carStudent/carStudentForm.html', '学员录入')
                     // layer.open({
                     //     type: 2,
-                    //     title: '添加教练',
+                    //     title: '学员录入',
                     //     content: '/carStudent/carStudentForm.html',
                     //     maxmin: true,
                     //     area: ['550px', '550px'],
@@ -115,6 +115,7 @@
             parseData: function (res) { //res 即为原始返回的数据
                 res.data.forEach(function (item) {
                     item.createdAt = layui.util.timeAgo(item.createdAt, true)
+                    item.registerDate = layui.util.toDateString(item.registerDate, 'yyyy-MM-dd')
                 })
                 return {
                     "code": 0, //解析接口状态
@@ -137,27 +138,24 @@
                     },
                     {
                         field: "card",
-                        title: "身份证",
+                        title: "证件号",
                     }, {
                         field: "phone",
                         title: "手机号",
                     }, {
-                        field: "subjects",
-                        title: "培训科目",
+                        field: "classType",
+                        title: "班型",
                     }, {
-                        field: "carTypes",
+                        field: "carType",
                         title: "培训车型",
                     },
                     {
-                        field: "status",
-                        title: "状态",
-                        templet: "#buttonTpl",
-                        minWidth: 80,
-                        align: "center"
+                        field: "registerDate",
+                        title: "报名日期",
                     },
                     {
                         field: "createdAt",
-                        title: "上传时间",
+                        title: "录入时间",
                     },
                     {
                         title: "操作",
@@ -179,7 +177,7 @@
             function (obj) {
                 var data = obj.data;
                 if ("del" === obj.event) {
-                    layer.confirm("确定删除此教练？", function (index) {
+                    layer.confirm("确定删除此学员？", function (index) {
                         admin.req({
                             type: 'delete',
                             url: '/api/carStudents/' + data._id
@@ -193,7 +191,7 @@
                 }
                 // layer.open({
                 //     type: 2,
-                //     title: "编辑教练",
+                //     title: "编辑学员",
                 //     content: "/carStudent/carStudentForm.html?id=" + data._id,
                 //     maxmin: !0,
                 //     area: ["550px", "550px"],
