--- a/views/index.html
+++ b/views/index.html
@@ -23,29 +23,31 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                         <i class="layui-icon layui-icon-refresh-3"></i>
                     </a>
                 </li>
-                <li class="layui-nav-item layui-hide-xs" lay-unselect="">
+                <!-- <li class="layui-nav-item layui-hide-xs" lay-unselect="">
                     <input type="text" placeholder="搜索..." autocomplete="off" class="layui-input layui-input-search"
                         layadmin-event="serach" lay-action="template/search.html?keywords=">
-                </li>
+                </li> -->
             </ul>
             <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
-                <li class="layui-nav-item" lay-unselect="">
+                <!-- 消息中心 -->
+                <!-- <li class="layui-nav-item" lay-unselect="">
                     <a lay-href="app/message/index.html" layadmin-event="message" lay-text="消息中心" title="消息中心">
                         <i class="layui-icon layui-icon-notice"></i>
-                        <!-- 如果有新消息，则显示小圆点 -->
-                        <!-- <span class="layui-badge-dot"></span> -->
+                        <span class="layui-badge-dot"></span>
                     </a>
-                </li>
+                </li> -->
                 <li class="layui-nav-item layui-hide-xs" lay-unselect="" title="主题切换">
                     <a href="javascript:;" layadmin-event="theme">
                         <i class="layui-icon layui-icon-theme"></i>
                     </a>
                 </li>
+                <!-- 便签 -->
                 <!-- <li class="layui-nav-item layui-hide-xs" lay-unselect="">
                     <a href="javascript:;" layadmin-event="note">
                         <i class="layui-icon layui-icon-note"></i>
                     </a>
                 </li> -->
+                <!-- 全屏 -->
                 <li class="layui-nav-item layui-hide-xs" lay-unselect="">
                     <a href="javascript:;" layadmin-event="fullscreen">
                         <i class="layui-icon layui-icon-screen-full"></i>
@@ -56,9 +58,9 @@ class="layui-layout-body" layadmin-themealias="fashion-red-header"
                         <cite>{{user.username}} {% if user.typeName %}【{{user.typeName}}】{%endif%}</cite>
                         <span class="layui-nav-more"></span></a>
                     <dl class="layui-nav-child">
-                        <dd><a lay-href="set/user/info.html">基本资料</a></dd>
-                        <dd><a lay-href="set/user/password.html">修改密码</a></dd>
-                        <hr>
+                        <!-- <dd><a lay-href="set/user/info.html">基本资料</a></dd> -->
+                        <!-- <dd><a lay-href="set/user/password.html">修改密码</a></dd> -->
+                        <!-- <hr> -->
                         <dd layadmin-event="logout" style="text-align: center;"><a>退出</a></dd>
                     </dl>
                 </li>
